# cygnus-jewel-suite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.kiro/steering/: product.md  status.md  structure.md  tech.md
apps/desktop/: README.md  index.html  package.json  pnpm-lock.yaml
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: lib.rs  money.rs  rules.rs  units.rs  valuation.rs
crates/core-engine/tests/: golden.rs
db/migrations/: 0001_init.sql  0002_invoices.sql  0003_document_series.sql  0004_credit_notes.sql  0005_purchases.sql  0006_old_gold.sql  0007_reference_seed.sql  0008_auth.sql  0009_payment.sql  0010_approvals.sql  0011_sale_or_return.sql  0012_schemes.sql  0013_scheme_gram.sql  0014_scheme_redeem.sql  0015_invoice_line_jewellery.sql  0016_estimates.sql  0017_sales_return.sql  0018_credit_note_reason_detail.sql  0019_old_gold_lot.sql  0020_old_gold_fine_weight.sql  0021_customer_advance.sql  0022_invoice_tender.sql  0023_cheque.sql  0024_return_settlement.sql  0025_cash_rate.sql  0026_smith_jobwork.sql  0027_party_model.sql  0028_invoice_party.sql  0029_materials_metals.sql  0030_materials_stones.sql  0031_invoice_line_stone.sql  0032_item_stone.sql  0033_old_gold_stone.sql  0034_party_archived.sql  0035_loose_stone.sql  0036_two_stage_purity.sql  0037_resale_item.sql  0038_item_category.sql  0039_old_stone_set.sql  0040_purchase_v2.sql  (+32 more)
docs/: README.md
docs/01-product/: glossary.md  module-specification.md  pain-points-and-solutions.md  reports-module-design.md  vision-and-scope.md
docs/02-architecture/: data-model-erd.md  deployment-and-sync.md  security.md  system-architecture.md  tech-stack.md  valuation-engine-spec.md
docs/03-delivery/: development-setup.md  https-setup.md  implementation-status.md  open-decisions.md  (+1 more)
tools/: backup.sh  reseed_all.py  reseed_staff.py
web-server/: package.json
(+80 files in other folders)
