[package]
name = "backend"
version = "0.1.0"
edition.workspace = true
description = "Cygnus Jewel Suite — backend API (Axum + PostgreSQL via sqlx)."

[dependencies]
core-engine = { path = "../core-engine" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "rust_decimal", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rust_decimal = { version = "1", features = ["serde-str"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
argon2 = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
# Optional: embedded PostgreSQL for "server" installs. When compiled with the
# `embedded-pg` feature and run with `--server`, the backend downloads/caches (or, with
# the crate's `bundled` feature, embeds) a PostgreSQL 18 build and manages it itself — so
# a shop's server PC needs no separate database install. Default builds don't include it.
postgresql_embedded = { version = "0.20", optional = true, default-features = false, features = ["theseus", "rustls", "tokio"] }

[features]
# Build the server distributable with:  cargo build -p backend --features embedded-pg
embedded-pg = ["dep:postgresql_embedded"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"
